--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -8,6 +8,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="https://kit.fontawesome.com/895d06444a.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
         crossorigin="anonymous">
@@ -31,15 +32,14 @@
         </li>
         {% if user.is_authenticated %}
         <li class="cl_color">
-          Привет,
-          <a href="{% url 'account_detail' user.username %}"><h3>{{ user.username }}</h3></a>
+          <a href="{% url 'account_detail' user.username %}">Профиль {{ user.username }}</a>
           
         </li>
         <li>    
             <a class="btn btn-secondary btn-sm ms-5" href="{% url 'logout' %}">Выйти</a>
         </li>  
         {% else %}
-        <li><span class="cl_color">Выполнить вход:</span> <a class="btn btn-secondary btn-sm ms-5" href="{% url 'login' %}">Вход</a></li>
+        <li><a class="btn btn-info btn-sm ms-5" href="{% url 'login' %}">Вход</a></li>
         {% endif %}
       </ul>
     </header>
